--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mrc03_atm_machine",
+  "name": "mrc03_atm_machine_project",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
